# sequence_unet

./: .gitignore  .readthedocs.yaml  .rsync_exclude  LICENCE.md  README.md  pyproject.toml  setup.py
analysis/: analyse_classifier_preds.R  analyse_esm.R  analyse_proteomes.R  analyse_pssm_preds.R  clinvar_other_tool_roc.R  clinvar_roc.R  dms_correlation.R  frequency.R  generalisation_roc.R  get_proteomes.R  initial_proteome_analysis.R  jelier_roc.R  summarise_proteome_preds.R  thesis_figure_freq.R  thesis_figure_generalisation.R  thesis_figure_model.R  thesis_figure_pssm.R  time_esm.py  time_preds.py  vary_padding.py
analysis/abundance/: analyse_proteomes.R  get_proteomes.R  initial_proteome_analysis.R  prepare_data.R  sift_summary.R
analysis/figures/: figure1.R  figure2.R  figure2_3.R  figure3.R  figure4.R  figure5.R  figureS1.R  figureS2.R  figureS4.R
analysis/thesis_figures/: thesis_figure_freq.R  thesis_figure_generalisation.R  thesis_figure_pssm.R  thesis_figure_training.R
docs/: requirements.txt
docs/source/: conf.py  graph_cnn.rst  index.rst  metrics.rst  models.rst  modules.rst  predict.rst  scripts.rst  sequence_unet.rst  sequence_unet.scripts.rst
figures/: model_details.pptx  model_graph.pptx  model_schematic.pptx
models/baseline/: baseline.py
models/classifier/: activation.py  regularisation.py  (+4 more)
sequence_unet/: __init__.py  graph_cnn.py  metrics.py  models.py  predict.py  proteinnet_maps.py
src/: analysis.R  baseline_cnn.py  config.R  lsf.py  metrics.py  pn_maps.py  sequence_unet.py  top_model.py  utils.py
test/: dms.fa  test_proteinnet
(+10 files in other folders)
