[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence_unet"
version = "1.0.3"
description = "Make protein predictions with Sequence UNET and train new models"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md", content-type = "text/markdown"}
keywords = [
  "deep learning", "neural network", "protein", "bioinformatics", "variant effect prediction"
]
authors = [
  { name = "Alistair Dunham", email = "ad44@sanger.ac.uk" },
  { name = "Pedro Beltrao"},
  { name = "Mohammed AlQuraishi"},
]
maintainers = [
  { name = "Alistair Dunham", email = "ad44@sanger.ac.uk" }
]
requires-python = ">=3.6"
dependencies = [
  "numpy",
  "pandas",
  "biopython",
  "tqdm",
  "proteinnetpy",
  "tensorflow >=2.6.0, <3.0.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
  "tensorflow-macos >=2.6.0, <3.0.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.urls]
Repository = "https://github.com/allydunham/sequence_unet"
Documentation = "https://sequence-unet.readthedocs.io/en/latest/"
Publication = "https://doi.org/10.1186/s13059-023-02948-3"

[project.scripts]
sequence_unet = "sequence_unet.scripts.make_preds:main"
split_fasta   = "sequence_unet.scripts.split_fasta:main"
filter_fasta  = "sequence_unet.scripts.filter_fasta:main"

[tool.setuptools]
include-package-data = false
zip-safe = true

[tool.setuptools.packages.find]
include = ["sequence_unet*"]
